add asset request
